[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fisher-torch"
version = "0.1.0"
description = "Extract simplex arrays from PyTorch model outputs"
requires-python = ">=3.9"
dependencies = [
    "fisher-simplex>=0.3",
    "torch>=2.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
transformers = ["transformers>=4.40"]
dev = ["pytest>=7.0", "ruff>=0.4"]

[tool.hatch.build.targets.wheel]
packages = ["src/fisher_torch"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
fisher-simplex = { path = "../fisher-simplex", editable = true }

[tool.ruff]
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
